# talkin

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: discord.yml
examples/: basic_login.py  full_demo.py  room_explorer.py
talkin/: __init__.py  _version.py  client.py  config.py  console.py  constants.py  exceptions.py
talkin/apis/: __init__.py  activity_api.py  im_api.py  moment_api.py  payment_api.py  room_api.py  user_api.py
talkin/auth/: __init__.py  auth_api.py
talkin/crypto/: __init__.py  client.py
talkin/http/: __init__.py  session.py
tests/: conftest.py  test_auth.py  test_crypto.py  test_rooms.py
