[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "talkin"
version         = "1.0.0"
description     = "Unofficial Python SDK for the Talkin social API — encrypted, fast, and easy to use."
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "The Fool" }]
requires-python = ">=3.9"
keywords        = ["talkin", "api", "sdk", "social", "chat", "voice", "rooms", "encrypted", "unofficial"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev  = ["pytest>=7.0", "pytest-mock>=3.10", "responses>=0.23"]
rich = ["rich>=13.0"]

[project.urls]
Homepage      = "https://github.com/thefool403/talkin"
Documentation = "https://github.com/thefool403/talkin#readme"
"Bug Tracker" = "https://github.com/thefool403/talkin/issues"
Discord       = "https://discord.gg/gYhVPvVWCN"
PyPI          = "https://pypi.org/project/talkin/"

[tool.setuptools.packages.find]
where   = ["."]
include = ["talkin*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.setuptools.package-data]
talkin = ["py.typed"]
